# Algos_Homeworks

./: .gitignore  Joseph_Flavels_task.cpp  README.md  a.out  random_elenet_lipko.cpp  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp
Algos_Done/: 1 (ArcGraph).cpp  1 (ListGraph).cpp  1 (MatrixGraph).cpp  1 (SetGraph).cpp  1 (main).cpp  1_2 (Hash-table).cpp  2 (Shortest way).cpp  2_4 (Binary tree).cpp  2_4.cpp  2_test3  3 (Dijkstra).cpp  3_2 (Decart tree).cpp  4_2 (AVL tree) 2ver.cpp  4_2 (AVL tree).cpp  4_3.cpp  4_test7  4_test7_answ  5_1.cpp  7_3.cpp  AbstractGraph.h  BT_Insert  BT_Insert.cpp  a.out  ex.txt
Module_1/: README.md  random_elenet_lipko.cpp  rk_1_array_shift.cpp  rk_1_scobe_sequence.cpp  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp
Module_2/: README.md  a.out  task_1  task_1.cpp  task_2  task_2.cpp  task_3.cpp  task_4.cpp
Module_3/: README.md  task_2.cpp  task_3.cpp  task_4.cpp
Module_3/task_1/: CMakeLists.txt  README.md  main.cpp
Module_3/task_1/graphs/: CMakeLists.txt
Module_3/task_1/graphs/include/: ArcGraph.h  IGraph.h  ListGraph.h  MatrixGraph.h  SetGraph.h
Module_3/task_1/graphs/src/: ArcGraph.cpp  IGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp
Module_3/task_1/graphs/test/: CMakeLists.txt  unit_test.cpp
